# coderclient

./: README.md  pyproject.toml
examples/: codebook.yaml  doc
src/coderclient/: client.py  entrypoint.py  models.py  settings.py
src/coderclient/templates/: prompt.j2
